--- a/ebert.yml
+++ b/ebert.yml
@@ -1,4 +1,4 @@
-# This configuration was used Ebert to review the wnuqui/cm repository
+# This configuration was used Ebert to review the wnuqui/coney repository
 # on bb4e8817fd6c5f0c84d13db06b4eac03941e65b3.
 # You can make this the default configuration for future reviews by moving this
 # file to your repository as `.ebert.yml` and pushing it to GitHub, and tweak
